--- a/tweets/src/css/NavBar.css
+++ b/tweets/src/css/NavBar.css
@@ -12,7 +12,9 @@ nav {
   width: 101%;
   position: sticky;
   top: 0;
+  background-color: #15202B;
   opacity: 1;
+  z-index: 5;
 }
 
 #home {
