--- a/tweets/src/css/UserPosts.css
+++ b/tweets/src/css/UserPosts.css
@@ -9,14 +9,13 @@ light blue classic #1da1f2
 
 #userTweetsH1 {
   display: flex;
-  /* margin-left: 40%; */
   margin-top: 0;
   color: #1da1f2;
   font-size: large;
   font-weight: bold;
   padding: 20px 76px 20px 20px;
   width: 100%;
-  border-right: outset .5px #8899a6c0;
+  border-right: outset 0.5px #8899a6c0;
   border-bottom: 1px outset #8899a6;
 }
 
@@ -29,14 +28,8 @@ light blue classic #1da1f2
   margin-right: 40.9%;
 }
 
-/* .userPostsListDiv */
-/* id="dateStampP" */
-/* id="userNameP" */
-/* id="postBodyP" */
-/* id="picP" */
-
 .userPostsListDiv {
-  border-right: outset .5px #8899a6c0;
+  border-right: outset 0.5px #8899a6c0;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -58,8 +51,6 @@ light blue classic #1da1f2
   border: 1px solid #8899a6;
   width: 3em;
   height: 3em;
-  /* margin-top: 20px;
-    margin-left: 20px; */
 }
 
 .rowContainer {
@@ -73,15 +64,12 @@ light blue classic #1da1f2
   margin: 0;
 }
 
-
 #userNameP {
   font-size: large;
   color: whitesmoke;
-  /* padding-top: 15px; */
 }
 
 #dateStampP {
-  /* padding-top: 20px; */
   font-size: 10pt;
 }
 
@@ -89,8 +77,7 @@ light blue classic #1da1f2
   display: flex;
   font-size: large;
   color: whitesmoke;
-  margin-left: 20%;;
-  /* padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 17%; */
+  padding-top: 2em;
+  padding-left: 2em;
+  margin-left: 3em;
 }
